<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_10"
    app:cardCornerRadius="@dimen/dimen_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10">

        <FrameLayout
            android:id="@+id/ly_img_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_marginEnd="@dimen/dimen_30"
                android:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription,MissingConstraints" />
        </FrameLayout>


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_user_name"
            app:layout_constraintStart_toEndOf="@id/ly_img_user"
            app:layout_constraintTop_toTopOf="@id/ly_img_user"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_user_age"
            app:layout_constraintBottom_toTopOf="@id/tv_city_name"
            app:layout_constraintStart_toEndOf="@id/ly_img_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            tools:ignore="MissingConstraints,NotSibling" />

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_city_name"
            app:layout_constraintBottom_toBottomOf="@id/ly_img_user"
            app:layout_constraintStart_toEndOf="@id/ly_img_user" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
